[tool.poetry]
name = "transformer"
version = "0.1.0"
description = ""
authors = ["GonnaFlyMethod <alex.husakou@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
numpy = "^2.0.0"
notebook = "^7.2.1"

[dependencies]
torch = { git = "https://github.com/pytorch/pytorch.git", branch = "main" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
